管理者の物件投稿画面・編集ページに非同期で写真アップロード機能追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -209,3 +209,59 @@ input[type="number"]::-webkit-inner-spin-button {
 .modal-estate-submit:hover {
   transform: scale(1.1, 1.1);
 }
+
+.image-background:hover {
+  opacity: 0.3;
+}
+
+.image-floor:hover {
+  opacity: 0.3;
+}
+
+.a-image:hover {
+  opacity: 0.3;
+}
+
+.b-image:hover {
+  opacity: 0.3;
+}
+
+.c-image:hover {
+  opacity: 0.3;
+}
+
+.d-image:hover {
+  opacity: 0.3;
+}
+
+.e-image:hover {
+  opacity: 0.3;
+}
+
+.f-image:hover {
+  opacity: 0.3;
+}
+
+.g-image:hover {
+  opacity: 0.3;
+}
+
+.h-image:hover {
+  opacity: 0.3;
+}
+
+.i-image:hover {
+  opacity: 0.3;
+}
+
+.j-image:hover {
+  opacity: 0.3;
+}
+
+.k-image:hover {
+  opacity: 0.3;
+}
+
+.l-image:hover {
+  opacity: 0.3;
+}
