--- a/app/views/admins/calendars/show.html.erb
+++ b/app/views/admins/calendars/show.html.erb
@@ -28,10 +28,10 @@
   </div>
   <div class="row pb-3">
     <div class="col text-right">
-      <button type="button" id="edit-modal-button" class="modal-edit btn btn-outline-secondary" data-toggle="modal" data-target="#edit-Modal" onclick="edit_modal_button_onclick();">
+      <button type="button" id="edit-modal-button" class="modal-edit btn btn-outline-secondary" data-toggle="modal" data-target="#edit-Modal">
         編集
       </button>
-      
+
       <div class="modal fade" id="edit-Modal" tabindex="-1" role="dialog" aria-labelledby="edit-ModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
