--- a/app/views/admins/researches/_research.html.erb
+++ b/app/views/admins/researches/_research.html.erb
@@ -1,6 +1,6 @@
 <div class="container" style="margin-bottom: 20px;">
   <div style="text-align: center; word-break: break-all; overflow-wrap: break-word; padding-top: 130px; font-size: 30px; font-weight: bold;">
-    <div style="display: inline-block; text-align: left;">
+    <div style="text-align: left;">
       <%= customer.name %> 様
     </div>
   </div>
