--- a/app/views/admins/calendars/_calendar.html.erb
+++ b/app/views/admins/calendars/_calendar.html.erb
@@ -1,8 +1,16 @@
 <%= month_calendar events: calendars do |date, calendars| %>
   <%= date.day %>
-  <% calendars.each do |calendar| %>
-    <div style="font-size: 13px;">
-      <%= calendar.start_time.strftime('%H:%M') %> <%= link_to truncate("#{calendar.title}", length:13), admins_calendar_path(calendar) %>
-    </div>
+  <% calendars.each.with_index(1) do |calendar, i| %>
+    <% if i > 8 %>
+      <% i = i - 8 %>
+      <div style="font-size: 13px;">
+        <%= calendar.start_time.strftime('%H:%M') %> <%= link_to truncate("#{calendar.title}", length:13), admins_calendar_path(calendar) %>
+        <%= link_to "+ #{ i }件の予定がございます" %>
+      </div>
+    <% else %>
+      <div style="font-size: 13px;">
+        <%= calendar.start_time.strftime('%H:%M') %> <%= link_to truncate("#{calendar.title}", length:13), admins_calendar_path(calendar) %>
+      </div>
+    <% end %>
   <% end %>
 <% end %>
