--- a/app/views/admins/calendars/index.html.erb
+++ b/app/views/admins/calendars/index.html.erb
@@ -27,6 +27,6 @@
 
 <div class="row justify-content-center" style="padding-bottom: 50px;">
   <div class="col-11">
-    <%= render 'calendar', calendars: @calendars %>
+    <%= render 'calendar', calendars: @calendars, week: @week %>
   </div>
 </div>
