--- a/app/views/customers/estates/index.html.erb
+++ b/app/views/customers/estates/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container" style="padding-top: 130px; margin-bottom: 20px;">
 
-  <div style="text-align: center; padding-bottom: 50px; color: #FA601A;">
+  <div style="text-align: center; padding-bottom: 50px; font-size: 20px; font-weight: bold; color: #FA601A;">
     <%= flash[:notice] %>
   </div>
 
