--- a/app/views/customers/estates/show.html.erb
+++ b/app/views/customers/estates/show.html.erb
@@ -3,7 +3,7 @@
 <%= attachment_image_tag @estate, :background_image, width: "100%;", heigth: "10%;" %>
 <div class="container" style="margin-bottom: 50px;">
   <div style="text-align: center; word-break: break-all; overflow-wrap: break-word; padding: 80px 0 80px 0; font-size: 30px; font-weight: bold;">
-    <div style="text-align: left;">
+    <div style="display: inline-block; text-align: left;">
       <%= @estate.name %>　<%= @estate.room_number %>号室
     </div>
   </div>
@@ -47,8 +47,12 @@
     </div>
   </div>
 
+  <div style="padding-top: 50px; text-align: center; font-size: 20px; font-weight: bold; color: #FA601A;">
+    <%= flash[:notice] %>
+  </div>
+
   <% if customer_signed_in? %>
-    <div style="text-align: center; padding: 100px 0 100px 0;">
+    <div style="text-align: center; padding: 50px 0 100px 0;">
       <button type="button" class="search_modal btn btn-outline-secondary" data-toggle="modal" data-target="#new-modal">
         お問い合わせする
       </button>
