calendarレイアウト調整

--- a/app/views/admins/estates/index.html.erb
+++ b/app/views/admins/estates/index.html.erb
@@ -36,6 +36,7 @@
     <%= flash[:new] %>
     <%= flash[:edit] %>
     <%= flash[:destroy] %>
+    <%= flash[:notice] %>
   </div>
 
   <% if @estates.present? %>
