--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -265,3 +265,24 @@ input[type="number"]::-webkit-inner-spin-button {
 .l-image:hover {
   opacity: 0.3;
 }
+
+.calendar {
+  position: relative;
+  display: inline-block;
+}
+.calendar::after {
+  position: absolute;
+  bottom: -0.1px;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 1px;
+  background: #333;
+  opacity: 0;
+  visibility: hidden;
+}
+.calendar:hover::after {
+  bottom: -0.1px;
+  opacity: 1;
+  visibility: visible;
+}
