customerサクセスメッセージ修正

--- a/app/views/admins/calendars/show.html.erb
+++ b/app/views/admins/calendars/show.html.erb
@@ -1,11 +1,8 @@
 <%= render "admins/customers/header", researches: @researches %>
 
-<div class="container" style="padding: 130px 0 50px 0;">
+<div class="container" style="padding: 130px 0 20px 0;">
   <div class="row">
-    <h2 style="margin: 0 auto; font-weight: bold;">スケジュール詳細</h2>
-  </div>
-  <div class="notice text-center pt-5 pb-4" style="font-size: 20px; font-weight: bold; color: red;">
-    <%= flash[:calendar_edit] %>
+    <h2 style="padding-bottom: 30px; margin: 0 auto; font-weight: bold;">スケジュール詳細</h2>
   </div>
 
   <div class="row pt-3 justify-content-center" style="font-weight: bold;">
