文章微調整

--- a/app/views/admins/estates/new.html.erb
+++ b/app/views/admins/estates/new.html.erb
@@ -33,8 +33,8 @@
 大きなテレビも置けますし、大きなテーブルも置けます。
 また、●●町で南向きのお家です。「日当り」は、お金をかけても手に入れられませんので、物件選びの際は日当りも重視したいですよね。
 あなたが「新居に置きたいな」と思っておられるテレビや家具が、実際に配置出来るかどうか
-この週末お天気が良ければ、このお家の日当りを見に一緒に現地へ参りましょう
-日当り重視のあなたに、ご満足頂けると思いますよ。
+この週末お天気が良ければ、このお家の日当りを見に一緒に現地へ参りましょう。
+日当り重視のあなたに、ご満足頂けると思います。
 
 物件設備：エレベーター、２４時間ゴミ出し可、駐輪場、駐車場、バイク置場、TVモニター付オートロック、宅配BOX
 部屋設備：バス・トイレ別、独立洗面台、浴室乾燥機、温水洗浄便座、室内洗濯機置場、３口ガスコンログリル付、バルコニー有",
