定型分微調整

--- a/app/views/admins/estates/new.html.erb
+++ b/app/views/admins/estates/new.html.erb
@@ -37,7 +37,7 @@
 日当り重視のあなたに、ご満足頂けると思います。
 
 物件設備：エレベーター、２４時間ゴミ出し可、駐輪場、駐車場、バイク置場、TVモニター付オートロック、宅配BOX
-部屋設備：バス・トイレ別、独立洗面台、浴室乾燥機、温水洗浄便座、室内洗濯機置場、３口ガスコンログリル付、バルコニー有、南向き、角部屋"
+部屋設備：バス・トイレ別、独立洗面台、浴室乾燥機、追い炊き機能、温水洗浄便座、室内洗濯機置場、３口ガスコンログリル付、２面バルコニー有、南向き、角部屋"
           :size=>"107x10" %>
         </div>
       </div>
