--- a/app/views/admins/estates/new.html.erb
+++ b/app/views/admins/estates/new.html.erb
@@ -34,7 +34,7 @@
 また、●●町で南向きのお家です。「日当り」は、お金をかけても手に入れられませんので、物件選びの際は日当りも重視したいですよね。
 あなたが「新居に置きたいな」と思っておられるテレビや家具が、実際に配置出来るかどうか
 週末お天気が良ければ、このお家の日当りを見に一緒に現地へ参りましょう。
-日当り重視のあなたに、ご満足頂けるはず。
+日当り重視のあなたに、ご満足頂けるはずです。
 
 物件設備：エレベーター２基、２４時間ゴミ出し可、駐輪場、駐車場、バイク置場、TVモニター付オートロック、宅配BOX、管理人常駐
 部屋設備：バス・トイレ別、独立洗面台、浴室乾燥機、追い炊き機能、温水洗浄便座、室内洗濯機置場、エアコン3台、３口ガスコンログリル付、畳部屋有、２面バルコニー有、2面採光、南向き、角部屋"
