--- a/app/views/admins/estates/new.html.erb
+++ b/app/views/admins/estates/new.html.erb
@@ -29,7 +29,7 @@
         <div class="col-2" style="text-align: center; font-weight: bold;"><%= f.label :物件概要 %></div>
         <div class="col" style="padding-left: 1px;">
           <%= f.text_area :info, placeholder:
-          "このお家の魅力は、何と言っても広々としたリビングです。リビングの広さは35帖もございます。
+          "このお家の魅力は、何と言っても広々としたリビングです。リビングの広さは帖もございます。
 大きなテレビも置けますし、大きなテーブルも置くことができます。
 また、●●町で南向きのお家です。「日当り」は、お金をかけても手に入れられませんので、物件選びの際は日当りも重視したいですよね。
 あなたが「新居に置きたいな」と思っておられるテレビや家具が、実際に配置出来るかどうか
