--- a/app/views/admins/estates/new.html.erb
+++ b/app/views/admins/estates/new.html.erb
@@ -30,7 +30,7 @@
         <div class="col" style="padding-left: 1px;">
           <%= f.text_area :info, placeholder:
           "このお家の魅力は、何と言っても広々としたリビングです。リビングの広さは30帖もございます。
-大きなテレビも置けますし、大きなテーブルも置くことができます。
+大型テレビも置けますし、大きなテーブルも置くことができます。
 また、●●町で南向きのお家です。「日当り」は、お金をかけても手に入れられませんので、物件選びの際は日当りも重視したいですよね。
 あなたが「新居に置きたいな」と思っておられるテレビや家具が、実際に配置出来るかどうか
 週末お天気が良ければ、このお家の日当りを見に一緒に現地へいきましょう。
