--- a/app/views/admins/estates/new.html.erb
+++ b/app/views/admins/estates/new.html.erb
@@ -23,7 +23,7 @@
       </div>
       <div class="row" style="padding-bottom: 30px;">
         <div class="col-2" style="text-align: center; font-weight: bold;"><%= f.label :住所 %></div>
-        <div class="col" style="padding-left: 1px;"><%= f.text_field :address, placeholder: "東京都新宿区岡田町1-2-2", :size=>"108" %></div>
+        <div class="col" style="padding-left: 1px;"><%= f.text_field :address, placeholder: "東京都新宿区岡田町1-2-2", :size=>"" %></div>
       </div>
       <div class="row">
         <div class="col-2" style="text-align: center; font-weight: bold;"><%= f.label :物件概要 %></div>
